# rust_simple_bbs

./: .gitignore  Cargo.toml
js/: .eslintignore  .eslintrc.js  package.json  tsconfig.json
js/src/: Registry.ts  clientSideApi.ts  createApp.tsx  createHistory.ts  createRoutes.tsx  index.styles.sass  index.tsx  types.ts  useClock.ts
js/src/components/: GlobalFooter.tsx  GlobalHeader.tsx  LandingPage.tsx  MessageCreation.tsx  ThreadBody.tsx  ThreadCreation.tsx  ThreadIndex.tsx  ThreadIndexTable.tsx  ThreadItem.tsx
js/src/fixtures/: threads.ts
js/src/libs/: codemirrorHelpers.ts
js/src/store/: actions.ts  index.ts  reducers.ts  saga.ts
js/webpack-config/: webpack.config.js
src/: board.rs  board_thread.rs  common_error.rs  data_gateway.rs  data_gateway_adapter.rs  e2e_test.rs  json_adapter.rs  main.rs  message_arrangement.rs  middleware.rs  route_action.rs  router.rs  server.rs  simple_board_api.rs  test_adapter.rs  thread_message.rs  to_json.rs  url_separation.rs
