[package]
name = "simple_board"
version = "0.1.0"
authors = ["mmmpa <mmmpa.mmmpa@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1.1.2"
rand = "0.6.5"
uuid = { version = "0.7", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
iron = "0.6.0"
hyper = "0.12.25"
bodyparser = "0.8.0"
reqwest = "0.9.12"
unicase = "1.4.2"
pulldown-cmark = { version = "0.4", default-features = false }
ammonia = "2.0.0"
time = "0.1.42"
